--- a/slider/package.json
+++ b/slider/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack-dev-server --config=webpack.dev.js --hot",
-    "prod": "webpack --env=prod --progress --profile --colors"
+    "prod": "webpack --config=webpack.prod.js --progress --profile --colors"
   },
   "author": "",
   "license": "ISC",
@@ -14,15 +14,18 @@
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
+    "chunk-manifest-webpack-plugin": "^1.1.0",
     "css-loader": "^0.28.4",
     "express": "^4.15.3",
+    "extract-text-webpack-plugin": "^2.1.2",
     "html-webpack-plugin": "^2.29.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
-    "webpack-dev-middleware": "^1.11.0",
+    "webpack-chunk-hash": "^0.4.0",
     "webpack-dev-server": "^2.5.0",
+    "webpack-merge": "^4.1.0",
     "webpack-notifier": "^1.5.0"
   }
 }
